fix: cat title alignment and main bg

--- a/src/application.scss
+++ b/src/application.scss
@@ -59,6 +59,7 @@ a {
   left: 0;
   z-index: 50;
   padding: 0.25em 2.75em;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 6%, rgba(0, 0, 0, 1) 100%);
   .header__logo {
     width: 50%;
   }
@@ -168,6 +169,12 @@ a {
   align-items: center;
   margin-top: 2em;
   padding-bottom: 2em;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.1) 3%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 
 .media-scroller {
@@ -185,11 +192,13 @@ a {
     width: 100%;
     padding: 0.5em 2.75em;
     .media-scroller__title {
+      text-align: center;
       font-size: 2.5em;
       text-shadow: 0px 0px 8px rgba($dark, 0.75);
     }
     .media-scroller__progress {
       display: flex;
+      align-self: flex-end;
       justify-content: start;
       align-items: end;
       gap: 0.25em;
